4장 기본 위젯의 속성들

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#FF000000</color> // "FF"FFFFFF -> 투명도 정도
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#A488FF</color>
 </resources>
